--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,5 +1,5 @@
 .projects-section {
-    padding: 50px 5% 50px 20%; /* Adjusted spacing to match About.css */
+    padding: 50px 5% 50px 20%; /* Adjusted spacing to match AboutEn.css */
     background-color: #fff;
     box-sizing: border-box;
     min-height: auto;
