--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -48,8 +48,12 @@
 
 /* Responsive Design */
 @media (max-width: 768px) {
+
     .home-container {
-        padding: 0 10%;
+        padding-left: 60px; /* Adjusted to make room for the navbar */
+        padding-top: 20px; /* Adjust if needed to align content vertically */
+        padding-right: 10px; /* Ensure right padding is sufficient */
+        padding-bottom: 20px; /* Adjust if needed */
     }
 
     .home-container h1 {
