--- a/src/components/Education/Education.css
+++ b/src/components/Education/Education.css
@@ -85,6 +85,7 @@
         padding-top: 20px; /* Adjust if needed to align content vertically */
         padding-right: 10px; /* Ensure right padding is sufficient */
         padding-bottom: 20px; /* Adjust if needed */
+        letter-spacing: normal;
     }
 
     .timeline-content {
