--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -86,7 +86,7 @@
         padding-top: 20px; /* Adjust if needed to align content vertically */
         padding-right: 10px; /* Ensure right padding is sufficient */
         padding-bottom: 20px; /* Adjust if needed */
-        letter-spacing: normal;
+        letter-spacing: 0px;
     }
 
     .timeline-content {
