--- a/src/components/Common/Navbar/Navbar.css
+++ b/src/components/Common/Navbar/Navbar.css
@@ -124,6 +124,7 @@
     justify-content: center;
     align-items: center;
     padding: 20px 0;
+    flex-direction: column; /* Stack children vertically */
 }
 
 .resume-button {
